--- a/pom.xml
+++ b/pom.xml
@@ -57,4 +57,11 @@
 			</plugin>
 		</plugins>
 	</build>
+<distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>ip-172-31-32-139.us-east-2.compute.internal-releases</name>
+        <url>http://ec2-18-188-142-196.us-east-2.compute.amazonaws.com:8040/artifactory/libs-release</url>
+    </repository>
+</distributionManagement>
 </project>
