--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>sparkjava-hello-world</groupId>
 	<artifactId>sparkjava-hello-world</artifactId>
-	<version>1.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<dependencies>
@@ -63,5 +63,10 @@
         <name>releases</name>
         <url>http://ec2-18-218-34-80.us-east-2.compute.amazonaws.com:8040/artifactory/libs-release-local</url>
     </repository>
+    <repository>
+        <id>snapshot</id>
+        <name>snapshot</name>
+        <url>http://ec2-18-218-34-80.us-east-2.compute.amazonaws.com:8040/artifactory/libs-snapshot-local</url>
+    </repository>	
 </distributionManagement>
 </project>
