--- a/pom.xml
+++ b/pom.xml
@@ -61,12 +61,28 @@
     <repository>
         <id>release</id>
         <name>releases</name>
-        <url>http://ec2-3-134-109-215.us-east-2.compute.amazonaws.com:8040/artifactory/libs-release-local</url>
+        <url>http://ec2-18-216-87-21.us-east-2.compute.amazonaws.com:8040/artifactory/libs-release-local</url>
     </repository>
     <snapshotRepository>
         <id>snapshot</id>
         <name>snapshot</name>
-        <url>http://ec2-3-134-109-215.us-east-2.compute.amazonaws.com:8040/artifactory/libs-snapshot-local</url>
+        <url>http://ec2-18-216-87-21.us-east-2.compute.amazonaws.com:8040/artifactory/libs-snapshot</url>
     </snapshotRepository>	
 </distributionManagement>
+<repositories>
+   <repository>
+      <snapshots>
+         <enabled>false</enabled>
+      </snapshots>
+      <id>release</id>
+      <name>libs-release</name>
+      <url>http://ec2-18-216-87-21.us-east-2.compute.amazonaws.com:8040/artifactory/libs-release</url>
+   </repository>
+   <repository>
+      <snapshots>
+      <id>snapshots</id>
+      <name>libs-snapshot</name>
+      <url>http://ec2-18-216-87-21.us-east-2.compute.amazonaws.com:8040/artifactory/libs-snapshot</url>
+   </repository>
+</repositories>	
 </project>
