--- a/deploy/appspec.yml
+++ b/deploy/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source: files/newpage.html
-  - destination: /var/www/html/newpage.html
+    destination: /var/www/html/
   
 hooks:
   BeforeInstall:
